--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,6 @@ cython_debug/
 
 # End of https://www.toptal.com/developers/gitignore/api/django
 {"mode":"full","isActive":false}
+
+/static
+/media
